--- a/app/_scss/includes/_nav.scss
+++ b/app/_scss/includes/_nav.scss
@@ -11,6 +11,9 @@ nav{
         @include shift(2);
         @include span-columns(8);
         
+        .transform-mask{
+            position: relative;
+        }
         // home page button
         .home-btn{
             display: inline-block;
@@ -70,6 +73,8 @@ nav{
 
 @include media($small-screen){
     nav .content-wrapper{
+        @include shift(0);
+        @include span-columns(12);
         .home-btn{
             width: 50px;
             height:  50px;
@@ -84,7 +89,7 @@ nav{
         ul{
             @include transform(translateX(100%));
             position: absolute;
-            top: 5px;
+            top: 0;
             left: 0;
             right: 0;
             overflow: hidden;
